<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:boxedEdges="all"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="103dp">

        <Button
            android:id="@+id/buttonRunning"
            android:layout_width="171dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:text="@string/running"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/buttonBicycle"
            android:layout_width="171dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="55dp"
            android:text="@string/bicycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="53dp" />

        <Button
            android:id="@+id/buttonWalking"
            android:layout_width="171dp"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="29dp"
            android:text="@string/walking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="103dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>