<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="54dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/buttonStop"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="11dp"
            android:layout_toStartOf="@+id/buttonStop"
            android:text="@string/start" />

        <Button
            android:id="@+id/buttonCloseActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonStop"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-54dp"
            android:layout_marginEnd="50dp"
            android:text="@string/close" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>